# the-floor-is-rhythm

./: .gitignore  .gitmodules  .tss  BUILD.md  CMakeLists.txt  LICENSE  README.md  floor.sln  the-floor-is-rhythm.sln  the-floor-is-rhythm.sln.DotSettings  the-floor-is-rhythm.vcxproj  the-floor-is-rhythm.vcxproj.filters  vcpkg-configuration.json  vcpkg.json
assets/: credit.txt
dependencies/: dependencies.props
include/: audio.h  beatmap.h  config.h  core.h  coremgr.h  exceptions.h  file_format.h  format.h  logging.h  main.h  skin.h  template.h  utilities.h  utilities.hpp
include/audio/: buses.h  memory.h  mixer.h
include/convert/: osu.h
include/core/: manager.h  type.h  work.h
include/engine/: structures.h
include/exceptions/: sdl.h
include/expections/: sdl.h
include/format/: file.h  skin.h
include/game/: beatmap.h  cursor.h  direction.h  g_cursor.h  hitobject.h  hitsound.h  metadata.h  object.h  timing.h
include/logger/: logging.h
include/logging/: exceptions.h  init.h  logger.h
include/render/: layer.h  object.h  screen.h  shader.h  texture.h  update.h
include/rule/: config.h  difficulty.h  file_format.h  skin.h  skin_format.h
include/structures/: action.h  config.h  template.h  timer.h  type.hpp  types.h
include/thread/: render.h
include/work/: audio.h  core.h  render.h  screen.h  screens.h  skin.h
src/: config.cpp  core.cpp  coremgr.cpp  example.cpp  logging.cpp  main.cpp  skin.cpp  utilities.cpp
src/audio/: buses.cpp  memory.cpp  mixer.cpp
src/convert/: osu.cpp
src/core/: manager.cpp  type.cpp  work.cpp
src/format/: skin.cpp
(+261 files in other folders)
